Tests should now run again
Former-commit-id: 78e7b6e69e41760939916a475f4a84a5b3a874d5